--- a/HRD_App/HRD_App.csproj
+++ b/HRD_App/HRD_App.csproj
@@ -32,8 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HRD_DataLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="HRD_DataLibrary">
       <HintPath>..\..\HRD_DataLibrary\HRD_DataLibrary\bin\Release\HRD_DataLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -76,19 +75,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Rest\DepartmentService.cs" />
-    <Compile Include="NewForm.cs">
+    <Compile Include="Errors\ApiException.cs" />
+    <Compile Include="Errors\NonExistentLoginException.cs" />
+    <Compile Include="Errors\WrongPasswordException.cs" />
+    <Compile Include="Forms\AuthorizationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewForm.Designer.cs">
-      <DependentUpon>NewForm.cs</DependentUpon>
+    <Compile Include="Forms\AuthorizationForm.designer.cs">
+      <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Rest\AccountService.cs" />
+    <Compile Include="Rest\DepartmentService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rest\IAccountService.cs" />
     <Compile Include="Rest\IDepartmentService.cs" />
     <Compile Include="Rest\RestApi.cs" />
-    <EmbeddedResource Include="NewForm.resx">
-      <DependentUpon>NewForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\AuthorizationForm.resx">
+      <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
