--- a/HRD_App/HRD_App.csproj
+++ b/HRD_App/HRD_App.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Net.Http, Version=4.1.1.2, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Net.Http.4.3.3\lib\net46\System.Net.Http.dll</HintPath>
       <Private>True</Private>
@@ -65,6 +66,7 @@
       <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.2\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,12 +79,114 @@
   <ItemGroup>
     <Compile Include="Errors\ApiException.cs" />
     <Compile Include="Errors\NonExistentLoginException.cs" />
+    <Compile Include="Forms\EmployeesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EmployeesForm.Designer.cs">
+      <DependentUpon>EmployeesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ResumesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ResumesForm.Designer.cs">
+      <DependentUpon>ResumesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\RewardsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RewardsForm.Designer.cs">
+      <DependentUpon>RewardsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UpdateHolidaysForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UpdateHolidaysForm.Designer.cs">
+      <DependentUpon>UpdateHolidaysForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Errors\WrongPasswordException.cs" />
     <Compile Include="Forms\AuthorizationForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\AuthorizationForm.designer.cs">
       <DependentUpon>AuthorizationForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\DepartmentsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DepartmentsForm.Designer.cs">
+      <DependentUpon>DepartmentsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\HolidaysForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\HolidaysForm.Designer.cs">
+      <DependentUpon>HolidaysForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\HRDForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\HRDForm.Designer.cs">
+      <DependentUpon>HRDForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PositionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PositionsForm.Designer.cs">
+      <DependentUpon>PositionsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UpdateDepartmentsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UpdateDepartmentsForm.Designer.cs">
+      <DependentUpon>UpdateDepartmentsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UpdateEmployeesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UpdateEmployeesForm.Designer.cs">
+      <DependentUpon>UpdateEmployeesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UpdatePositionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UpdatePositionsForm.Designer.cs">
+      <DependentUpon>UpdatePositionsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UpdateResumesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UpdateResumesForm.Designer.cs">
+      <DependentUpon>UpdateResumesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UpdateRewardsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UpdateRewardsForm.Designer.cs">
+      <DependentUpon>UpdateRewardsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UpdateVacanciesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UpdateVacanciesForm.Designer.cs">
+      <DependentUpon>UpdateVacanciesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UpdateWorkedTimeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UpdateWorkedTimeForm.Designer.cs">
+      <DependentUpon>UpdateWorkedTimeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\VacanciesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\VacanciesForm.Designer.cs">
+      <DependentUpon>VacanciesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\WorkedTimeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\WorkedTimeForm.Designer.cs">
+      <DependentUpon>WorkedTimeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Rest\AccountService.cs" />
     <Compile Include="Rest\DepartmentService.cs" />
@@ -91,8 +195,59 @@
     <Compile Include="Rest\IAccountService.cs" />
     <Compile Include="Rest\IDepartmentService.cs" />
     <Compile Include="Rest\RestApi.cs" />
+    <EmbeddedResource Include="Forms\EmployeesForm.resx">
+      <DependentUpon>EmployeesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ResumesForm.resx">
+      <DependentUpon>ResumesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RewardsForm.resx">
+      <DependentUpon>RewardsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UpdateHolidaysForm.resx">
+      <DependentUpon>UpdateHolidaysForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AuthorizationForm.resx">
       <DependentUpon>AuthorizationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DepartmentsForm.resx">
+      <DependentUpon>DepartmentsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\HolidaysForm.resx">
+      <DependentUpon>HolidaysForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\HRDForm.resx">
+      <DependentUpon>HRDForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PositionsForm.resx">
+      <DependentUpon>PositionsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UpdateDepartmentsForm.resx">
+      <DependentUpon>UpdateDepartmentsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UpdateEmployeesForm.resx">
+      <DependentUpon>UpdateEmployeesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UpdatePositionsForm.resx">
+      <DependentUpon>UpdatePositionsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UpdateResumesForm.resx">
+      <DependentUpon>UpdateResumesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UpdateRewardsForm.resx">
+      <DependentUpon>UpdateRewardsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UpdateVacanciesForm.resx">
+      <DependentUpon>UpdateVacanciesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UpdateWorkedTimeForm.resx">
+      <DependentUpon>UpdateWorkedTimeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\VacanciesForm.resx">
+      <DependentUpon>VacanciesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\WorkedTimeForm.resx">
+      <DependentUpon>WorkedTimeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -102,6 +257,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -117,6 +273,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\search_48835.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\11.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2,.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
