--- a/HRD_App/HRD_App.csproj
+++ b/HRD_App/HRD_App.csproj
@@ -204,6 +204,12 @@
     <Compile Include="Forms\WorkedTimes\WorkedTimesForm.Designer.cs">
       <DependentUpon>WorkedTimesForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\WorkedTimes\WorkedTimesGraph.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\WorkedTimes\WorkedTimesGraph.Designer.cs">
+      <DependentUpon>WorkedTimesGraph.cs</DependentUpon>
+    </Compile>
     <Compile Include="Logic\OnValueChangedListener.cs" />
     <Compile Include="Rest\Authenticator.cs" />
     <Compile Include="Rest\Interfaces\IEmployeeService.cs" />
@@ -291,6 +297,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\WorkedTimes\WorkedTimesForm.resx">
       <DependentUpon>WorkedTimesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\WorkedTimes\WorkedTimesGraph.resx">
+      <DependentUpon>WorkedTimesGraph.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
